--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,10 +15,10 @@
     "plugins": [
       {
         "name": "next"
-      }
+      },
     ],
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
