--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "eslint-plugin-jsx-a11y": "^6.9.0",
+    "fuse.js": "^7.0.0",
     "lucide-react": "^0.417.0",
     "next": "^14.2.13",
     "react": "^18",
