--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "eslint-plugin-jsx-a11y": "^6.9.0",
+    "exceljs": "^4.4.0",
+    "file-saver": "^2.0.5",
     "fuse.js": "^7.0.0",
     "lucide-react": "^0.417.0",
     "next": "^14.2.13",
@@ -39,6 +41,7 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@types/file-saver": "^2.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
