--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@tailwindcss/forms": "^0.5.7",
     "@tanstack/react-table": "^8.20.1",
+    "aos": "^2.3.4",
     "axios": "^1.7.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -31,16 +32,18 @@
     "eslint-plugin-jsx-a11y": "^6.9.0",
     "exceljs": "^4.4.0",
     "file-saver": "^2.0.5",
+    "framer-motion": "^11.14.4",
     "fuse.js": "^7.0.0",
     "lucide-react": "^0.417.0",
     "next": "^14.2.13",
     "react": "^18",
     "react-dom": "^18",
     "react-text-input-mask": "^1.0.12",
-    "tailwind-merge": "^2.5.2",
+    "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@types/aos": "^3.0.7",
     "@types/file-saver": "^2.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
